--- a/mycontacts_backend/package.json
+++ b/mycontacts_backend/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "express-async-handler": "^1.2.0"
   }
 }
